--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start": "node src/server.js"
   },
   "dependencies": {
+    "@kubernetes/client-node": "^0.20.0",
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
   }
